--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src='js/jquery.resloader.js' type='text/javascript'></script>
     <script src='js/openpoker/jquery.pp.js' type='text/javascript'></script>
     <script src='js/openpoker/jquery.ws.js' type='text/javascript'></script>
+    <script src='js/game_preview.js' type='text/javascript'></script>
     <script src='js/player.js' type='text/javascript'></script>
     <script src='js/index.js' type='text/javascript'></script>
     <script src='js/hall.js' type='text/javascript'></script>
@@ -54,7 +55,13 @@
           </form>
         </div>
         <div id='hall'>
-          <div id='game_preview'></div>
+          <div id='game_preview'>
+            <textarea class='template'><div class='seat'>
+              <div class='nick'></div>
+              <img class='photo'>
+              <div class='inplay'></div>
+            </div></textarea>
+          </div>
           <table cellspacing='0px' id='game_list'>
             <thead>
               <tr>
