添加对游戏列表中房间名称的支持，并添加游戏携带额上下限额的显示。

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <th class='col_longest'>房間</th>
                 <th class='col_short'>大/小盲注</th>
                 <th class='col_short'>人數</th>
-                <th class='col_short'>旁觀</th>
+                <th class='col_short'>攜帶額</th>
               </tr>
             </thead>
             <tbody>
@@ -82,10 +82,10 @@
             <button class='cmdblue' id='cmd_watch' type='command'>觀戰</button>
           </div>
           <textarea class='template'><tr>
-            <td class='type'></td>
+            <td class='name'></td>
             <td class='blind'></td>
             <td class='player'></td>
-            <td class='waiting'></td>
+            <td class='limit'></td>
           </tr></textarea>
         </div>
       </div>
