--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset='utf-8'>
     <title>創世紀-德州撲克</title>
-    <script src='js/jquery.js' type='text/javascript'></script>
-    <script src='js/jquery.plugins.js' type='text/javascript'></script>
-    <script src='js/jquery.resloader.js' type='text/javascript'></script>
-    <script src='js/openpoker/jquery.pp.js' type='text/javascript'></script>
-    <script src='js/openpoker/jquery.ws.js' type='text/javascript'></script>
+    <script src='js/jquery/jquery.js' type='text/javascript'></script>
     <script src='js/header.js' type='text/javascript'></script>
     <script src='js/positions.js' type='text/javascript'></script>
-    <script src='js/game_preview.js' type='text/javascript'></script>
+    <script src='js/jquery/jquery.base64.js' type='text/javascript'></script>
+    <script src='js/jquery/jquery.blockUI.js' type='text/javascript'></script>
+    <script src='js/jquery/jquery.resloader.js' type='text/javascript'></script>
+    <script src='js/jquery/jquery.timers.js' type='text/javascript'></script>
+    <script src='js/jquery/jquery.tools.js' type='text/javascript'></script>
+    <script src='js/plugins/prototype.js' type='text/javascript'></script>
+    <script src='js/plugins/websocket.js' type='text/javascript'></script>
     <script src='js/player.js' type='text/javascript'></script>
     <script src='js/game.js' type='text/javascript'></script>
-    <script src='js/index.js' type='text/javascript'></script>
+    <script src='js/game_preview.js' type='text/javascript'></script>
     <script src='js/hall.js' type='text/javascript'></script>
+    <script src='js/index.js' type='text/javascript'></script>
     <link href='css/index.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
