再次重构目录结构

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <script src='js/positions.js' type='text/javascript'></script>
     <script src='js/jquery/jquery.base64.js' type='text/javascript'></script>
     <script src='js/jquery/jquery.blockUI.js' type='text/javascript'></script>
-    <script src='js/jquery/jquery.resloader.js' type='text/javascript'></script>
     <script src='js/jquery/jquery.timers.js' type='text/javascript'></script>
     <script src='js/jquery/jquery.tools.js' type='text/javascript'></script>
+    <script src='js/plugins/resloader.js' type='text/javascript'></script>
     <script src='js/plugins/prototype.js' type='text/javascript'></script>
     <script src='js/plugins/websocket.js' type='text/javascript'></script>
+    <script src='js/header.js' type='text/javascript'></script>
+    <script src='js/positions.js' type='text/javascript'></script>
     <script src='js/player.js' type='text/javascript'></script>
-    <script src='js/game.js' type='text/javascript'></script>
-    <script src='js/game_preview.js' type='text/javascript'></script>
+    <script src='js/preview.js' type='text/javascript'></script>
     <script src='js/hall.js' type='text/javascript'></script>
+    <script src='js/game.js' type='text/javascript'></script>
     <script src='js/index.js' type='text/javascript'></script>
     <link href='css/index.css' rel='stylesheet' type='text/css'>
   </head>
