--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src='js/player.js' type='text/javascript'></script>
     <script src='js/preview.js' type='text/javascript'></script>
     <script src='js/hall.js' type='text/javascript'></script>
+    <script src='js/seat.js' type='text/javascript'></script>
     <script src='js/game.js' type='text/javascript'></script>
     <script src='js/index.js' type='text/javascript'></script>
     <link href='css/index.css' rel='stylesheet' type='text/css'>
@@ -111,7 +112,8 @@
             <input id='raise_number' max='50' min='0' step='1' type='number' value='0'>
           </div>
           <div class='template'>
-            <div class='empty_seat'></div>
+            <div class='seat'></div>
+            <div class='empty_seat'>觀戰</div>
             <div class='playing_seat'></div>
           </div>
         </div>
