添加对PlayingSeat的显示支持

--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
           <div class='template'>
             <div class='seat'></div>
             <div class='empty_seat'>觀戰</div>
-            <div class='playing_seat'></div>
+            <div class='playing_seat'>
+              <label class='nick'></label>
+              <img class='photo'>
+              <label class='inplay'></label>
+            </div>
           </div>
         </div>
       </div>
