添加对DEALER协议的支持

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
               <img class='photo'>
               <label class='inplay'></label>
             </div>
+            <div id='dealer'></div>
           </div>
         </div>
       </div>
