添加对DRAW协议的支持

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
               <label class='nick'></label>
               <img class='photo'>
               <label class='inplay'></label>
+              <img class='draw_card' src='css/poker_back.png'>
             </div>
             <div class='dealer'></div>
           </div>
