添加對CANCEL消息的提醒

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id='page'>
-      <div class='growlUI' id='tips_empty'>测试提示消息</div>
+      <div class='growlUI' id='tips_empty'>請等待其他玩家的加入</div>
       <h3 id='msg_connect'>連線中...</h3>
       <h3 id='msg_loading'>加載中...</h3>
       <h3 id='msg_joining'>進入中...</h3>
