--- a/index.html
+++ b/index.html
@@ -112,6 +112,24 @@
             <input id='raise_range' max='50' min='0' type='range' value='0'>
             <input id='raise_number' max='50' min='0' step='1' type='number' value='0'>
           </div>
+          <div class='buyin'>
+            <h3>參與游戏</h3>
+            <table>
+              <tr>
+                <td class='key'>最小代入:</td>
+                <td class='value' id='min'></td>
+              </tr>
+              <tr>
+                <td class='key'>最大代入:</td>
+                <td class='value' id='max'></td>
+              </tr>
+              <tr>
+                <td class='key'>您的餘額:</td>
+                <td class='value' id='balance'></td>
+              </tr>
+            </table>
+            <a id='cmd_cancel'>返回</a>
+          </div>
           <div class='template'>
             <div class='seat'></div>
             <div class='empty_seat'>觀戰</div>
