添加對BUYIN的支持

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </div>
           <div class='template'>
             <div class='seat'></div>
-            <div class='empty_seat'>觀戰</div>
+            <div class='empty_seat'>加入</div>
             <div class='playing_seat'>
               <label class='nick'></label>
               <img class='photo'>
