添加對起立按鈕的支持

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
             <input id='raise_range' max='50' min='0' type='range' value='0'>
             <input id='raise_number' max='50' min='0' step='1' type='number' value='0'>
           </div>
+          <a class='action' id='cmd_up'>起立</a>
+          <a class='action' id='cmd_cancel'>退出</a>
           <div class='buyin'>
             <h3>參與游戏</h3>
             <table>
