添加對bet_lab的支持

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
               <img class='photo'>
               <label class='inplay'></label>
               <img class='draw_card' src='css/poker_back.png'>
+              <label class='bet_lab'></label>
             </div>
             <div class='dealer'></div>
           </div>
