調整位置，添加游戏日誌功能

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <label id='wait_next'>請等待參與下局游戏。</label>
             <label id='wait_player'>請等待其他玩家參與。</label>
           </div>
+          <textarea cols='20' id='logs' readonly='readonly' rows='2'></textarea>
           <div class='actions'>
             <a class='action' id='cmd_fold'>蓋牌</a>
             <a class='action' id='cmd_check'>過牌</a>
