--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <label id='lab_min'></label>
             <label id='lab_max'></label>
             <input id='range_buy' type='range'>
-            <a id='cmd_cancel'>返回</a>
+            <a id='cmd_back'>返回</a>
             <button id='cmd_buy' type='command'>確定</button>
           </div>
           <div class='template'>
